# PokedexCPP

./: CMakeLists.txt  PokedexWindow.cpp  PokedexWindow.h  Pokemon.cpp  Pokemon.h  main.cpp  pokemons.csv
